complete draft function, compare&add message

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,21 @@
 	<head>
 		<meta charset="urf-8">
 		<title> Simple EPS Game</title>
-		<link rel="stylesheet" href ="{{ static_url("main.css")}}">
-		<script src="{{ static_url("main.js")}}"></script>
+		<link rel="stylesheet" href ="./static/main.css">
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+		<script type="text/javascript" src="./static/main.js"></script>
 	</head>
 	<body>
-		<div id="message_a_dispaly">
-			
-			
+		<div id="message_a_display">
 		</div>
-		<div id="message_b_dispaly">
+		<input id="message_a" type="text">
+
+			
+		<div id="message_b_display">
 		</div>
+		<input id="message_b" type="text">
+		
 		<div id="correct_display">
 			<input type="text" id="correct_value">
 		<div>
