--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,21 @@
 		<script type="text/javascript" src="./static/main.js"></script>
 	</head>
 	<body>
-		<div id="message_a_display">
+		<div id="instructions">
+		<ul>
+			<li>This is a simple ESP game</li>
+			<li>You will login as either Player A or Player b</li>
+			<li>There are five pictures, you will have 30 secs for each</li>
+			<li>Please label the picture, you will score if you and your partner's label is the same</li>
+		</ul>
+		</div>
+		
+		<div id="image_container">
+			<img src="./static/image/">
+		</div>
+		
+		
+		<div id="message_a_display" >
 		</div>
 		<input id="message_a" type="text">
 
